<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_alpha_linear"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:id="@+id/tv_td_1"
                            android:text="@string/s_hp_task_number"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_1_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_2"
                            android:text="@string/s_problem_type1"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_2_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_3"
                            android:text="@string/big_type_name"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_3_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_4"
                            android:text="@string/small_type_name"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_4_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_5"
                            android:text="@string/s_problem_description"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_5_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_6"
                            android:text="@string/s_requirement"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_6_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp">
                        <TextView
                            android:id="@+id/tv_td_7"
                            android:text="@string/s_tf_task_adress"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_7_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginBottom="5dp">
                        <TextView
                            android:id="@+id/tv_td_8"
                            android:text="@string/s_hp_report_time"
                            style="@style/task_1"
                            />
                        <TextView
                            android:id="@+id/tv_td_8_value"
                            style="@style/task_2"
                            />
                    </LinearLayout>
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/c_alpha_linear"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/test1"
                        android:layout_margin="10dp"/>
                </LinearLayout>
                ] <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/c_alpha_linear"
                android:layout_marginTop="10dp"
                android:divider="@drawable/medium_space"
                android:showDividers="middle">
               <TextView
                   android:id="@+id/tv_search_map"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:gravity="center_vertical"
                   android:drawableRight="@mipmap/arrow_right1"
                   android:drawableLeft="@mipmap/dingwei"
                   android:drawablePadding="10dp"
                   android:text="@string/s_search_map"
                   android:textColor="@color/c_problem_report_left"
                   android:paddingRight="10dp"
                   android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/tv_route_planning"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:drawableRight="@mipmap/arrow_right1"
                    android:drawableLeft="@mipmap/lujing"
                    android:drawablePadding="10dp"
                    android:text="@string/s_search_map"
                    android:textColor="@color/c_problem_report_left"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <Button
                        android:id="@+id/b_pr_cancel"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:text="@string/s_button_cancel"
                        android:background="@drawable/pr_cancel"
                        android:textColor="@color/c_button_text"/>

                    <View
                        android:layout_width="14dp"
                        android:layout_height="50dp" />

                    <Button
                        android:id="@+id/b_pr_report"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:text="@string/s_button_report"
                        android:background="@drawable/pr_report"
                        android:textColor="@color/c_button_text"/>
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        
    </LinearLayout>
</layout>

