<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_alpha_linear"
                    android:divider="@drawable/medium_space"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_problem_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_problem_type"
                            android:textColor="@color/c_problem_report_left"

                            />

                        <Spinner
                            android:id="@+id/sp_problem_type"
                            style="@style/pr_spinner" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_big_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_big_type"
                            android:textColor="@color/c_problem_report_left"

                            />

                        <Spinner
                            android:id="@+id/sp_big_type"
                            style="@style/pr_spinner" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_small_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_small_type"
                            android:textColor="@color/c_problem_report_left"

                            />


                        <Spinner
                            android:id="@+id/sp_small_type"
                            style="@style/pr_spinner" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_problem_level"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_problem_level"
                            android:textColor="@color/c_problem_report_left"

                            />


                        <Spinner
                            android:id="@+id/sp_problem_level"
                            style="@style/pr_spinner" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_free_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_free_time"
                            android:textColor="@color/c_problem_report_left"

                            />


                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawablePadding="10dp"
                            android:drawableRight="@mipmap/time_img"
                            android:paddingRight="12dp"
                            android:text="2017.04.15 19:30:20"
                            android:textColor="@color/c_problem_report_right" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_map_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_map_location"
                            android:textColor="@color/c_problem_report_left"

                            />


                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:drawablePadding="10dp"
                            android:drawableRight="@mipmap/map_location_img"
                            android:paddingRight="12dp"
                            android:text="@string/s_map_location_text"
                            android:textColor="@color/c_problem_report_right" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/tv_address_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/s_address_description"
                            android:textColor="@color/c_problem_report_left"

                            />

                        <EditText
                            android:id="@+id/et_address_description"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/c_alpha_et"
                            android:gravity="start"
                            android:padding="4dp"
                            android:textColor="@color/c_problem_report_left"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_party_man"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/s_party_man"
                            android:textColor="@color/c_problem_report_left"

                            />


                        <Spinner
                            android:id="@+id/sp_party_man"
                            style="@style/pr_spinner" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"

                        >

                        <TextView
                            android:id="@+id/tv_contact_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/s_contact_number"
                            android:textColor="@color/c_problem_report_left"

                            />

                        <EditText
                            android:id="@+id/et_contact_number"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/c_alpha_et"
                            android:gravity="start"
                            android:padding="4dp"
                            android:textColor="@color/c_problem_report_left"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/tv_incident_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/s_incident_description"
                            android:textColor="@color/c_problem_report_left"

                            />

                        <EditText
                            android:id="@+id/et_incident_description"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/c_alpha_et"
                            android:gravity="start"
                            android:padding="4dp"
                            android:textColor="@color/c_problem_report_left"
                            android:textSize="14sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <Button
                        android:id="@+id/b_pr_cancel"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:text="@string/s_button_cancel"
                        android:background="@drawable/pr_cancel"
                        android:textColor="@color/c_button_text"/>

                    <View
                        android:layout_width="14dp"
                        android:layout_height="50dp" />

                    <Button
                        android:id="@+id/b_pr_report"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_weight="1"
                        android:text="@string/s_button_report"
                        android:background="@drawable/pr_report"
                        android:textColor="@color/c_button_text"/>
                </LinearLayout>


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</layout>